reorganized scss and fix overflow image in slider by centering theme

--- a/src/assets/scss/components/gallery.scss
+++ b/src/assets/scss/components/gallery.scss
@@ -1,3 +1,4 @@
+// Gallery Container
 .wrapper__container__images {
     height: 100%;
     left: 0;
@@ -12,11 +13,13 @@
     }
 }
 
+// Gallery Composition
 .container__images {
     display: grid;
     grid-template-areas:
     'info image .';
     grid-template-columns: 25% 50% 25%;
+    grid-auto-rows: auto;
     height: 100%;
     left: 50%;
     position: absolute;
@@ -33,51 +36,14 @@
         grid-auto-rows: min-content;
     }
 
-    .container_images__info {
-        order: 2;
-        align-items: flex-start;
-        align-self: flex-start;
-        display: flex;
-        flex-direction: column;
-        grid-area: info;
-        // height: calc( 100% - #{$unit});
-        justify-content: flex-start;
-        margin-left: #{$unit};
-        margin-top: #{$unit};
-        opacity: 0;
-        transition: opacity 1.2s cubic-bezier(0.23, 1, 0.32, 1);
-        width: auto;
-
-        .container__images__info__title {
-            font-family: $f_p;
-            font-weight: 700;
-            margin: 0 0 calc( #{$unit} / 2 ) 0;
-
-            @include respond(hd) {
-                font-size: $title;
-            }
-        }
-        p {
-            width: 80%;
-
-            @include respond(hd) {
-                font-size: $p;
-            }
-        }
-
-        .legend {
-            font-weight: 300;
-        }
-    }
-
     .active {
         opacity: 0.3;
     }
     .upper--image {
         opacity: 1!important;
     }
-
 }
+
 
 .container__image__item {
     align-self: center;
@@ -94,42 +60,6 @@
     z-index:3;
 }
 
-.container_images__gallery {
-    align-self: center;
-    grid-area: image;
-    opacity: 0;
-    transition: opacity 1.2s cubic-bezier(0.23, 1, 0.32, 1);
-    width: 100%;
-
-    @include respond(tablet) {
-        height: auto;
-        margin: 30px auto 0;
-        width: calc( 100% - 60px );
-    }
-
-    .carousel-cell {
-        align-items: center;
-        display: flex;
-        height: 500px;
-        justify-content: center;
-        width: inherit;
-
-        @include respond(tablet) {
-            align-items: flex-start;
-            height: auto;
-
-            img {
-                height: auto!important;
-                width: 100%;
-
-            }
-        }
-
-        img {
-            height: inherit;
-        }
-    }
-}
 
 .flickity-viewport {
     grid-area: slider;
